cabal-version:      2.4
name:               ebpf-tools
version:            0.1.0.0
synopsis:           Assembler and disassembler for eBPF bytecode


-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

-- A copyright notice.
copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
    build-depends:    base >=4.14.3.0 && < 5,
                      bytestring

    default-language: Haskell2010


library
    import: deps
    exposed-modules:  Ebpf.Asm
                    , Ebpf.AsmParser
                    , Ebpf.Decode
                    , Ebpf.Encode
                    , Ebpf.Helpers

    -- Modules included in this library but not exported.
    -- other-modules:
    build-depends:    binary,
                      containers,
                      parsec
    hs-source-dirs:   src

executable ebpf-tools
    import: deps
    main-is:          Main.hs
    build-depends:    ebpf-tools,
                      optparse-applicative,
                      pretty-simple

    hs-source-dirs:   app
