cabal-version:   3.4
name:            ebpf-tools
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
copyright:       2022-2024 Ken Friis Larsen
maintainer:      ken@friislarsen.net
author:          Ken Friis Larsen
homepage:        https://github.com/kfl/ebpf-tools
bug-reports:     https://github.com/kfl/ebpf-tools/issues
synopsis:        Assembler and disassembler for eBPF bytecode
tested-with:     GHC == 9.4.7, GHC == 9.6.3, GHC == 9.8.1
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/kfl/ebpf-tools.git



common common-deps
    build-depends:
        base >= 4.14.3.0 && < 5,
        binary >= 0.8.7 && < 0.9,
        bytestring >= 0.12 && < 0.13,
        text >= 2.0.2 && < 3,
        text-display >= 0.0.5 && < 0.1

    default-language: Haskell2010


library
    import: common-deps
    exposed-modules:
        Ebpf.Asm
        Ebpf.AsmParser
        Ebpf.Decode
        Ebpf.Encode
        Ebpf.Helpers
        Ebpf.Display
        Ebpf.Quote

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
                  containers >= 0.6.8 && < 0.7,
                  parsec >= 3.1 && < 3.2,
                  syb >= 0.7 && < 8,
                  template-haskell >= 2.19 && < 3

executable ebpf-tools
    import: common-deps
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        ebpf-tools,
        optparse-applicative  >= 0.17 && < 0.19,
        pretty-simple >= 4.0 && < 4.2

test-suite ebpf-tools-test
    import: common-deps
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        EbpfTest
        AsmParserTest
        QuoteTest

    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        tasty,
        tasty-hunit,
        raw-strings-qq,
        ebpf-tools
